--- a/portfolio.html
+++ b/portfolio.html
@@ -338,6 +338,23 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form-block">
+          <p class="footer-soc-title">Subscribe</p>
+          <form class="footer-form">
+            <input
+              class="footer-form-input"
+              type="email"
+              name="email"
+              placeholder="E-mail"
+            />
+            <button class="btn footer-form-btn" type="submit">
+              Subscribe
+              <svg class="footer-form-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-sub"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
