--- a/index.html
+++ b/index.html
@@ -583,64 +583,65 @@
           </svg>
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
-        <form class="modal-form" name="order_service"></form>
-        <label class="modal-form-label" for="order_name">Name</label>
-        <div class="modal-form-field">
-          <input
-            class="modal-form-input"
-            type="text"
-            name="order_name"
-            id="order_name"
-          />
-          <svg class="modal-form-icon" width="18" height="24">
-            <use href="./images/icons.svg#icon-person"></use>
-          </svg>
-        </div>
-        <label class="modal-form-label" for="order_phone">Phone</label>
-        <div class="modal-form-field">
-          <input
-            class="modal-form-input"
-            type="tel"
-            name="order_phone"
-            id="order_phone"
-          />
-          <svg class="modal-form-icon" width="18" height="24">
-            <use href="./images/icons.svg#icon-phone"></use>
-          </svg>
-        </div>
-        <label class="modal-form-label" for="order_email">Email</label>
-        <div class="modal-form-field">
-          <input
-            class="modal-form-input"
-            type="email"
-            name="order_email"
-            id="order_email"
-          />
-          <svg class="modal-form-icon" width="18" height="24">
-            <use href="./images/icons.svg#icon-email"></use>
-          </svg>
-        </div>
-        <label class="modal-form-label" for="order_comment">Comment</label>
-        <textarea
-          class="modal-form-message"
-          name="order_comment"
-          id="order_comment"
-          placeholder="Text input"
-        ></textarea>
-        <label class="modal-form-check">
-          <input class="" type="checkbox" />
-          <span class="modal-form-check-desc">
-            I accept the terms and conditions of the
-            <a
-              class="modal-form-check-link"
-              href=""
-              target="_blank"
-              rel="noopener noreferrer"
-              >Privacy Policy</a
-            >
-          </span>
-        </label>
-        <button class="btn modal-form-btn" type="submit">Send</button>
+        <form class="modal-form" name="order_service">
+          <label class="modal-form-label" for="order_name">Name</label>
+          <div class="modal-form-field">
+            <input
+              class="modal-form-input"
+              type="text"
+              name="order_name"
+              id="order_name"
+            />
+            <svg class="modal-form-icon" width="18" height="24">
+              <use href="./images/icons.svg#icon-person"></use>
+            </svg>
+          </div>
+          <label class="modal-form-label" for="order_phone">Phone</label>
+          <div class="modal-form-field">
+            <input
+              class="modal-form-input"
+              type="tel"
+              name="order_phone"
+              id="order_phone"
+            />
+            <svg class="modal-form-icon" width="18" height="24">
+              <use href="./images/icons.svg#icon-phone"></use>
+            </svg>
+          </div>
+          <label class="modal-form-label" for="order_email">Email</label>
+          <div class="modal-form-field">
+            <input
+              class="modal-form-input"
+              type="email"
+              name="order_email"
+              id="order_email"
+            />
+            <svg class="modal-form-icon" width="18" height="24">
+              <use href="./images/icons.svg#icon-email"></use>
+            </svg>
+          </div>
+          <label class="modal-form-label" for="order_comment">Comment</label>
+          <textarea
+            class="modal-form-message"
+            name="order_comment"
+            id="order_comment"
+            placeholder="Text input"
+          ></textarea>
+          <label class="modal-form-check">
+            <input class="" type="checkbox" />
+            <span class="modal-form-check-desc">
+              I accept the terms and conditions of the
+              <a
+                class="modal-form-check-link"
+                href=""
+                target="_blank"
+                rel="noopener noreferrer"
+                >Privacy Policy</a
+              >
+            </span>
+          </label>
+          <button class="btn modal-form-btn" type="submit">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
